# patchable

./: Cargo.toml
patchable/: Cargo.toml
patchable-core/: Cargo.toml
patchable-core/src/: lib.rs
patchable-macros/: Cargo.toml
patchable-macros/src/: lib.rs
patchable/src/: lib.rs
