[package]
name = "patchable-macros"
description = "Patchable structs"
repository = "https://github.com/EthanYidong/patchable"
documentation = "https://github.com/EthanYidong/patchable"
homepage = "https://github.com/EthanYidong/patchable"
version = "0.1.0"
authors = ["EthanYidong <ethanyidong@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
patchable-core = { version = "0.1", path = "../patchable-core" }

syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
